--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,8 @@
         "plugin:@angular-eslint/template/process-inline-templates"
       ],
       "rules": {
+        "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/no-unused-vars": "off",
         "@angular-eslint/directive-selector": [
           "error",
           {
