--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,8 @@ Thumbs.db
 # Environment files
 src/environments/*
 !src/environments/environment.example.ts
+
+# Firebase
+.firebase
+.firebaserc
+firebase.json
